--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,12 @@
 {
     "name": "smart-health-vault-backend",
     "version": "1.0.0",
-    "description": "Backend API for Smart Health Vault with PostgreSQL",
+    "description": "Backend API for Smart Health Vault",
     "main": "src/server.js",
     "scripts": {
-        "dev": "nodemon src/server.js",
         "start": "node src/server.js",
-        "db:migrate": "prisma migrate dev",
-        "db:studio": "prisma studio",
-        "db:seed": "node prisma/seed.js"
+        "dev": "nodemon src/server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
         "health",
@@ -21,16 +19,14 @@
         "express": "^4.18.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "@prisma/client": "^5.7.0",
-        "bcryptjs": "^2.4.3",
+        "firebase-admin": "^12.0.0",
+        "body-parser": "^1.20.2",
+        "mysql2": "^3.6.5",
+        "bcrypt": "^5.1.1",
         "jsonwebtoken": "^9.0.2",
-        "zod": "^3.22.4",
-        "multer": "^1.4.5-lts.1",
-        "nodemailer": "^6.9.7",
-        "express-rate-limit": "^7.1.5"
+        "multer": "^1.4.5-lts.1"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2",
-        "prisma": "^5.7.0"
+        "nodemon": "^3.0.2"
     }
 }
